redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stedi-matthew
spec:
  selector:
    matchLabels:
      app: redis-stedi-matthew
  serviceName: redis-stedi-matthew
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-stedi-matthew
    spec:
      containers:
        - name: redis-stedi-matthew
          image: redis:7.0.5-alpine
          imagePullPolicy: Always
          args: ["--requirepass", "$(REDIS_PASS)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-matthew-volume
              mountPath: /data
  volumeClaimTemplates: 
  - metadata:
      name: redis-matthew-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources: 
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stedi-matthew
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: redis-stedi-matthew
